--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,43 @@
-/home/ricardo/Documentos/cursos_programacao/python/.ipynb_checkpoints
-/home/ricardo/Documentos/cursos_programacao/python/livros_py
-/home/ricardo/Documentos/cursos_programacao/python/rename_files.py
-/home/ricardo/Documentos/cursos_programacao/python/sync_linux.py
-/home/ricardo/Documentos/cursos_programacao/python/data_science_py/pandas_curso
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/.git
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/__pycache__
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula1.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_classifica_busca.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_dados.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_dados_pandas.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_open_csv.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_search_classification.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/aula2_search_problem.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/ml_background/multinomialnaivebayes.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula4_2__estimadores_nao_lineares_support_vector_machine_scaled_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula4__estimadores_nao_lineares_support_vector_machine_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula5_2_decision_trees.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula5_3_decision_trees.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula5_4_decision_trees.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula5_decision_trees.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula_2_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula_3_2_learning_curve_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula_3_3_learning_curve_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula_3_4_learning_curve_just_fix_seed_numpy_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/aula_3_intro_sklearn.py
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/graph.dot
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/graph.png
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/tree.png
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/tree2.png
-/home/ricardo/Documentos/cursos_programacao/python/machine_learning_py/machine_learning_sklearn/tree3.png
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/.git
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula1_properties.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula2_2_inheritance.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula2_inheritance.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula3_2_polimorfismo.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula3_3_polimorfismo.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula3_4_polimorfismo.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/avancando_oo_py/aula3_polimorfismo.py
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/descubra_o_python
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/Ex_Files_Python_Object_Programming
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/orientacao_objetos_python
-/home/ricardo/Documentos/cursos_programacao/python/programacao_py/strings_manipulation/.git
+.ipynb_checkpoints
+livros_py
+rename_files.py
+sync_linux.py
+data_science_py/pandas_curso
+machine_learning_py/ml_background/.git
+machine_learning_py/ml_background/__pycache__
+machine_learning_py/ml_background/aula1.py
+machine_learning_py/ml_background/aula2_classifica_busca.py
+machine_learning_py/ml_background/aula2_dados.py
+machine_learning_py/ml_background/aula2_dados_pandas.py
+machine_learning_py/ml_background/aula2_open_csv.py
+machine_learning_py/ml_background/aula2_search_classification.py
+machine_learning_py/ml_background/aula2_search_problem.py
+machine_learning_py/ml_background/multinomialnaivebayes.py
+machine_learning_py/machine_learning_sklearn/aula4_2__estimadores_nao_lineares_support_vector_machine_scaled_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula4__estimadores_nao_lineares_support_vector_machine_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula5_2_decision_trees.py
+machine_learning_py/machine_learning_sklearn/aula5_3_decision_trees.py
+machine_learning_py/machine_learning_sklearn/aula5_4_decision_trees.py
+machine_learning_py/machine_learning_sklearn/aula5_decision_trees.py
+machine_learning_py/machine_learning_sklearn/aula_2_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula_3_2_learning_curve_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula_3_3_learning_curve_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula_3_4_learning_curve_just_fix_seed_numpy_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/aula_3_intro_sklearn.py
+machine_learning_py/machine_learning_sklearn/graph.dot
+machine_learning_py/machine_learning_sklearn/graph.png
+machine_learning_py/machine_learning_sklearn/tree.png
+machine_learning_py/machine_learning_sklearn/tree2.png
+machine_learning_py/machine_learning_sklearn/tree3.png
+programacao_py/avancando_oo_py/.git
+programacao_py/avancando_oo_py/aula1_properties.py
+programacao_py/avancando_oo_py/aula2_2_inheritance.py
+programacao_py/avancando_oo_py/aula2_inheritance.py
+programacao_py/avancando_oo_py/aula3_2_polimorfismo.py
+programacao_py/avancando_oo_py/aula3_3_polimorfismo.py
+programacao_py/avancando_oo_py/aula3_4_polimorfismo.py
+programacao_py/avancando_oo_py/aula3_polimorfismo.py
+programacao_py/descubra_o_python
+programacao_py/Ex_Files_Python_Object_Programming
+programacao_py/orientacao_objetos_python
+programacao_py/strings_manipulation/.git
