Apagado .git de outras pastas

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ machine_learning_py/machine_learning_sklearn/graph.png
 machine_learning_py/machine_learning_sklearn/tree.png
 machine_learning_py/machine_learning_sklearn/tree2.png
 machine_learning_py/machine_learning_sklearn/tree3.png
+machine_learning_py/dealing_with_data_of_many_dimensions/reducao_dimensionalidade
 programacao_py/avancando_oo_py/aula1_properties.py
 programacao_py/avancando_oo_py/aula2_2_inheritance.py
 programacao_py/avancando_oo_py/aula2_inheritance.py
